--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <section class="main-section">
         <section class="phones-section">
-            <video src="videos/phones-video.mp4" class="video1" autoplay loop></video>
+            <video src="videos/phones-video.mp4" class="video1" autoplay loop muted playsinline></video>
             <div class="phones-titles">
                 <h2 class="phones-title">
                     Celulares
@@ -79,7 +79,7 @@
             </div>
         </section>
         <section class="service-section">
-            <video src="videos/service-video.mp4" class="video2" autoplay loop></video>
+            <video src="videos/service-video.mp4" class="video2" autoplay loop muted playsinline></video>
             <div class="service-titles">
                 <h2 class="service-title">
                     Servicio tecnico
