--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
         <img src="images/iphone2.jpg" alt="iphone" class="iphone">
         <div class="home__titles-wrapper">
             <div class="home__titles">
-                <h2 class="home__h2 home__h2-1">Phones</h2>
-                <h2 class="home__h2 home__h2-2">&</h2>
-                <h2 class="home__h2 home__h2-3">Service</h2>
+                <div class="home-title title1">
+                    <h2 class="home__h2 home__h2-1">Phones</h2>
+                </div>
+                <div class="home-title title2">
+                    <h2 class="home__h2 home__h2-2">&</h2>
+                </div>
+                <div class="home-title title3">
+                    <h2 class="home__h2 home__h2-3">Service</h2>
+                </div>
             </div>
             <div class="home__paragraph-container">
                 <p class="home__paragraph">
@@ -68,27 +74,78 @@
     </section>
     <section class="main-section">
         <section class="phones-section">
-            <video src="videos/phones-video.mp4" class="video1" autoplay loop muted playsinline></video>
+            <video src="videos/phones-video.mp4" class="video video1" autoplay loop muted playsinline></video>
             <div class="phones-titles">
                 <h2 class="phones-title">
-                    Celulares
+                    ¿Necesitás un celular?
                 </h2>
                 <p class="phones-paragraph">
-                    Tenemos stock de una gran variedad de celulares al mejor precio.
+                    Llegaste al lugar indicado. Tenemos stock de una gran variedad de celulares al mejor precio.
                 </p>
+            </div>
+            <div class="phones-images-wrapper">
+                <div class="phones-images-container">
+                    <img src="images/cellphone.png" alt="cellphone" class="cellphone1">
+                    <img src="images/cheap.png" alt="cheap" class="cheap-img">
+                </div>
             </div>
         </section>
         <section class="service-section">
-            <video src="videos/service-video.mp4" class="video2" autoplay loop muted playsinline></video>
+            <video src="videos/service-video.mp4" class="video video2" autoplay loop muted playsinline></video>
             <div class="service-titles">
                 <h2 class="service-title">
-                    Servicio tecnico
+                    ¿Necesitás un arreglo?
                 </h2>
                 <p class="service-paragraph">
-                    Además de la venta de celulares, somos expertos en brindarle servicio tecnico a todo tipo de celulares.
+                    Además de la venta de celulares, somos expertos en brindarle servicio tecnico a todo tipo de dispositivos.
                 </p>
             </div>
+            <div class="phones-images-wrapper">
+                <div class="phones-images-container">
+                    <img src="images/broken-phone.png" alt="celular-roto" class="broken-phone">
+                    <img src="images/destornillador.png" alt="destornillador" class="destornillador">
+                </div>
+            </div>
         </section>
+    </section>
+    <section class="gallery-section">
+        <h2 class="gallery-title">
+            Antes/Después
+        </h2>
+        <div class="gallery-wrapper-father">
+            <div class="gallery-wrapper-son">
+                <div class="gallery-container">
+                    <img src="images/before-after/before1.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after1.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+                <div class="gallery-container">
+                    <img src="images/before-after/before2.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after2.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+                <div class="gallery-container">
+                    <img src="images/before-after/before3.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after3.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+                <div class="gallery-container">
+                    <img src="images/before-after/before4.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after4.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+                <div class="gallery-container">
+                    <img src="images/before-after/before5.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after5.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+                <div class="gallery-container">
+                    <img src="images/before-after/before6.webp" alt="imagen-antes" class="gallery-image before">
+                    <img src="images/before-after/after6.webp" alt="imagen-despues" class="gallery-image after">
+                </div>
+            </div>
+        </div>
+        <div class="lightbox">
+            <img src="" alt="imagen-agrandada" id="lightbox-img">
+        </div>
+        <h3 class="gallery-h3">
+            Más reparaciones en mi Instagram
+        </h3>
     </section>
 
     <script src="script.js"></script>
