--- a/index.html
+++ b/index.html
@@ -143,9 +143,49 @@
         <div class="lightbox">
             <img src="" alt="imagen-agrandada" id="lightbox-img">
         </div>
-        <h3 class="gallery-h3">
-            Más reparaciones en mi Instagram
-        </h3>
+        <div class="gallery-h2-container">
+            <h2 class="gallery-h2 gallery-h2-1">
+                ¿Querés 
+            </h2>
+            <h2 class="gallery-h2 gallery-h2-2">
+                ver más
+            </h2>
+            <h2 class="gallery-h2 gallery-h2-3">
+                arreglos?
+            </h2>
+        </div>
+        <div class="gallery-h3-container">
+            <h3 class="gallery-h3">
+                Visitá nuestro <a href="https://instagram.com" class="gallery-h3-a" target="_blank">Instagram</a>!
+            </h3>
+            <img src="images/ig.png" alt="instagram logo" class="gallery__ig-logo">
+        </div>
+    </section>
+    <section class="contact-section">
+        <h2 class="contact-title">
+            Contactános!
+        </h2>
+        <div class="social-media-wrapper">
+            <div class="social-media-container">
+                <img src="images/fb.png" alt="facebook logo" class="logo fb-logo">
+                <a href="#" class="social-media-a">
+                    Facebook
+                </a>
+            </div>
+            <div class="social-media-container">
+                <img src="images/ig.png" alt="instagram logo" class="logo ig-logo">
+                <a href="#" class="social-media-a">
+                    Instagram
+                </a>
+            </div>
+            <div class="social-media-container">
+                <img src="images/wsp.png" alt="whatsapp logo" class="logo wsp-logo">
+                <a href="#" class="social-media-a">
+                    WhatsApp
+                </a>
+            </div>
+        </div>
+
     </section>
 
     <script src="script.js"></script>
