--- a/index.html
+++ b/index.html
@@ -23,29 +23,30 @@
         </div>
         <ul class="header__ul">
             <li class="header__li">
-                <a href="#" class="header__a">
-                    Home
+                <a href="#home-section" class="header__a">
+                    Inicio
                 </a>
             </li>
             <li class="header__li">
-                <a href="#" class="header__a">
-                    About
+                <a href="#gallery-section" class="header__a">
+                    Antes/Después
                 </a>
             </li>
             <li class="header__li">
-                <a href="#" class="header__a">
-                    Contact
+                <a href="#ubication-section" class="header__a">
+                    Ubicación
                 </a>
             </li>
             <li class="header__li">
-                <a href="#" class="header__a">
-                    Register
+                <a href="#contact-section" class="header__a">
+                    Contacto
                 </a>
             </li>
         </ul>
     </header>
-    <section class="home-section">
-        <img src="images/iphone2.jpg" alt="iphone" class="iphone">
+    <section class="home-section" id="home-section">
+        <img src="images/background-images/iphone2.jpg" alt="iphone fondo" class="iphone bgmobile">
+        <img src="images/background-images/desktopbg.jpg" alt="iphone fondo" class="iphone bgdesktop">
         <div class="home__titles-wrapper">
             <div class="home__titles">
                 <div class="home-title title1">
@@ -77,7 +78,7 @@
             <video src="videos/phones-video.mp4" class="video video1" autoplay loop muted playsinline></video>
             <div class="phones-titles">
                 <h2 class="phones-title">
-                    ¿Necesitás un celular?
+                    ¿Querés un celular?
                 </h2>
                 <p class="phones-paragraph">
                     Llegaste al lugar indicado. Tenemos stock de una gran variedad de celulares al mejor precio.
@@ -108,7 +109,7 @@
             </div>
         </section>
     </section>
-    <section class="gallery-section">
+    <section class="gallery-section" id="gallery-section">
         <h2 class="gallery-title">
             Antes/Después
         </h2>
@@ -161,31 +162,51 @@
             <img src="images/ig.png" alt="instagram logo" class="gallery__ig-logo">
         </div>
     </section>
-    <section class="contact-section">
+
+    <section class="ubication-section" id="ubication-section">
+        <h2 class="ubication-title">
+            Donde encontrarnos
+        </h2>
+        <div class="ubication-container">
+            <h3 class="ubication-paragraph">Nos ubicamos en 25 de Mayo 8192, José León Suárez, Provincia de Buenos Aires</h3>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105187.76130465916!2d-58.72438395664061!3d-34.5252499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbb47c038bc1b%3A0xc55819c30983a6a3!2sFMK%20Service!5e0!3m2!1ses!2sar!4v1739821421957!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <h2 class="ultimate-title-ubication">
+            Te esperamos! 🤍
+        </h2>
+    </section>
+
+    <section class="contact-section" id="contact-section">
         <h2 class="contact-title">
             Contactános!
         </h2>
         <div class="social-media-wrapper">
             <div class="social-media-container">
-                <img src="images/fb.png" alt="facebook logo" class="logo fb-logo">
-                <a href="#" class="social-media-a">
-                    Facebook
+                <a href="https://www.facebook.com" class="a_proof" target="_blank">
+                    <div class="a-wrapper">
+                        <img src="images/fb.png" alt="facebook logo" class="logo fb-logo">
+                        <p>Facebook</p>
+                    </div>
                 </a>
             </div>
             <div class="social-media-container">
-                <img src="images/ig.png" alt="instagram logo" class="logo ig-logo">
-                <a href="#" class="social-media-a">
-                    Instagram
+                <a href="https://www.instagram.com" class="a_proof" target="_blank">
+                    <div class="a-wrapper">
+                        <img src="images/ig.png" alt="instagram logo" class="logo ig-logo">
+                        <p>Instagram</p>
+                    </div>
                 </a>
             </div>
             <div class="social-media-container">
-                <img src="images/wsp.png" alt="whatsapp logo" class="logo wsp-logo">
-                <a href="#" class="social-media-a">
-                    WhatsApp
+                <a href="https://whatsapp.com" class="a_proof">
+                    <div class="a-wrapper">
+                        <img src="images/wsp.png" alt="whatsapp logo" class="logo wsp-logo">
+                        <p>WhatsApp</p>
+                    </div>
                 </a>
             </div>
-        </div>
-
     </section>
 
     <script src="script.js"></script>
